# simple-microvm-infra

./: .gitignore  2026-01-03-you-just-provisioned-a-new-instance-on-aws-and-are.txt  CLAUDE.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  NETWORK-TOPOLOGY.md  README.md  WEBHOOK_CHECKLIST.md  WEBHOOK_SETUP.md  deploy-vm1-docker.sh  flake.nix  result
.github/workflows/: terraform-dns.yml  test.yml  vm-state-tests.yml
docs/: AWS-PROVISION.md  DEPLOYMENT.md  SSH.md  TESTING.md  vm-customization.md
docs/plans/: 2025-10-31-minimal-microvm-infrastructure-design.md  2026-04-18-per-slot-otel-telemetry.md  IMPLEMENTATION-PLAN.md
examples/: webhook-with-secrets.nix
hosts/hypervisor/: comin.nix  default.nix  dns-allowlist.nix  ghproxy.nix  hardware-configuration.nix  incus.nix  ip-allocator.nix  litellm-config.yaml  litellm.nix  network.nix  nginx-sni-filter.nix  oauth-proxy-slots.nix  otel-collector.nix  postgres.nix  redis.nix  slot-pool.nix  smtp-proxy.nix  tailscale.nix  telemetry.nix  twilio-webhook.nix
hosts/hypervisor/oauth-proxy/: authz.polar  default.nix  policy.json  proxy.py
hosts/hypervisor/smtp-proxy/: default.nix  proxy.py
hosts/slot1/: default.nix
hosts/vm1/: default.nix  example-custom.nix
hosts/vm2/: default.nix
hosts/vm3/: default.nix
hosts/vm4/: default.nix
hosts/vm5/: default.nix
lib/: create-vm.nix  default.nix
modules/: caddy.nix  claude-code-auth.nix  desktop-vm.nix  home-manager.nix  incus-dns-filter.nix  incus-ssh-jail.nix  incus-vm.nix  k3s-vm.nix  microvm-auto-restart.nix  microvm-base.nix  networks.nix  slot-pool-subscriber.nix  slot-vm.nix  vm-comin.nix  vm-resources.nix  vm5-restricted-network.nix  webhook.nix
modules/ebs-volume/: README.md  default.nix  example.nix
modules/incus-ssh-jail/: default.nix  scriptlet.nix
modules/monitoring/: default.nix  grafana.nix  loki.nix  node-exporter.nix  prometheus.nix  vector-hypervisor.nix  vector-vm.nix  vm-agent.nix
modules/slot-subscriber/: default.nix  server.py
pkgs/playwright-mcp/: default.nix
pkgs/vm-state/: default.nix
scripts/: setup-hypervisor-iam.sh  setup-webhook.sh  slot-pool-subscriber.py  vm-state.sh  zfs_manager.py
terraform/: main.tf  oidc.tf
tests/: slot-pool-test.nix  vm-state.nix
vm-state/: Cargo.toml  meson.build
vm-state-cpp/: CMakeLists.txt  default.nix
vm-state-cpp/include/cli/: cli.hpp
vm-state-cpp/include/providers/: state_provider.hpp  systemd_dbus_vm_provider.hpp  vm_provider.hpp  zfs_state_provider.hpp
vm-state-cpp/include/utils/: exec.hpp  json.hpp
vm-state-cpp/src/: main.cpp
vm-state-cpp/src/cli/: cli.cpp
vm-state-cpp/src/providers/: state_provider.cpp  systemd_dbus_vm_provider.cpp  vm_provider.cpp  zfs_state_provider.cpp
vm-state-cpp/src/utils/: exec.cpp  json.cpp
vm-state/src/: error.rs  lib.rs  main.cpp  main.rs  types.rs  vm_state.cpp  vm_state.hpp
vm-state/src/backend/: local_zfs.rs  mod.rs
