[package]
name = "vm-state"
version = "0.1.0"
edition = "2021"
description = "Manage portable MicroVM states with ZFS backend"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
colored = "2"
nix = { version = "0.27", features = ["user"] }

[lib]
name = "vm_state"
path = "src/lib.rs"

[[bin]]
name = "vm-state"
path = "src/main.rs"
